--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="hero">
       <div class="box">
-        <nav>
+        <nav class="navigation">
           <h1 class="banner">Y'all, look at this Sassy landing page</h1>
           <ul>
             <li><a href="#">Go To A Picture Of Me Smiling</a></li>
